--- a/source/_includes/asides/github.html
+++ b/source/_includes/asides/github.html
@@ -27,4 +27,7 @@
   </script>
   <script src="{{ root_url }}/javascripts/github.js" type="text/javascript"> </script>
 </section>
+<section>
+  <a href="https://github.com/seancorfield">@seancorfield</a> on GitHub
+</section>
 {% endif %}
