Style per Kevin Stannard's work!
Finally! Add favicon and logo, adjust colors to match logo.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,5 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+h1, h2, h3, h4 {
+   color: $title-color;
+}
