--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -4,14 +4,25 @@
     <p>In addition, the family includes cfmljure, an easy way to integrate Clojure code into your CFML application, and a port of FW/1 to Clojure as well as a Leiningen template for creating FW/1 projects in Clojure.</p>
 </section>
 <section>
-    <h1>3.1 Documentation (current - master)</h1>
-    <a href="/documentation">Getting Started Guide</a><br />
+    <h1>3.5 Documentation (current - master)</h1>
+    <a href="/documentation/">Getting Started Guide</a><br />
     <a href="/documentation/developing-applications.html">Developing Applications Guide</a><br />
     <a href="/documentation/using-aop-one.html">Using AOP/1</a><br />
     <a href="/documentation/using-di-one.html">Using DI/1</a><br />
     <a href="/documentation/using-subsystems.html">Using Subsystems</a><br />
     <a href="/documentation/reference-manual.html">Reference Manual</a><br />
+    <a href="/documentation/cfml-and-clojure.html">Mixing CFML &amp; Clojure</a><br />
     <a href="/documentation/roadmap.html">Roadmap</a><br />
+</section>
+<section>
+    <h1>3.1 Documentation</h1>
+    <a href="/documentation/3.1">Getting Started Guide</a><br />
+    <a href="/documentation/3.1/developing-applications.html">Developing Applications Guide</a><br />
+    <a href="/documentation/3.1/using-aop-one.html">Using AOP/1</a><br />
+    <a href="/documentation/3.1/using-di-one.html">Using DI/1</a><br />
+    <a href="/documentation/3.1/using-subsystems.html">Using Subsystems</a><br />
+    <a href="/documentation/3.1/reference-manual.html">Reference Manual</a><br />
+    <a href="/documentation/3.1/roadmap.html">Roadmap</a><br />
 </section>
 <section>
     <h1>3.0 Documentation</h1>
@@ -21,15 +32,4 @@
     <a href="/documentation/3.0/using-subsystems.html">Using Subsystems</a><br />
     <a href="/documentation/3.0/reference-manual.html">Reference Manual</a><br />
     <a href="/documentation/3.0/roadmap.html">Roadmap</a><br />
-</section>
-<section>
-    <h1>3.5 Documentation (upcoming - develop)</h1>
-    <a href="/documentation/3.5">Getting Started Guide</a><br />
-    <a href="/documentation/3.5/developing-applications.html">Developing Applications Guide</a><br />
-    <a href="/documentation/3.5/using-aop-one.html">Using AOP/1</a><br />
-    <a href="/documentation/3.5/using-di-one.html">Using DI/1</a><br />
-    <a href="/documentation/3.5/using-subsystems.html">Using Subsystems</a><br />
-    <a href="/documentation/3.5/reference-manual.html">Reference Manual</a><br />
-    <a href="/documentation/3.5/cfml-and-clojure.html">Mixing CFML &amp; Clojure</a><br />
-    <a href="/documentation/3.5/roadmap.html">Roadmap</a><br />
 </section>
