--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@
 			<a href="https://github.com/framework-one/fw1/" class="btn" target="_blank">View on GitHub</a>
 		{% endif %}
 		{% if site.show_downloads %}
-			<a href="https://github.com/framework-one/fw1/archive/master.zip" class="btn">Download 4.2 (Current)</a>
-			<a href="https://github.com/framework-one/fw1/archive/v4.3.0-beta2.zip" class="btn">Download 4.3 (Beta2)</a>
+			<a href="https://github.com/framework-one/fw1/archive/master.zip" class="btn">Download 4.3</a>
 		{% endif %}
 		{% if site.subscribe_rss %}
 			<a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS" class="btn">RSS</a>
